FIX: visibility issues for the slider bar by making it wider and opacity .7

--- a/css/style.css
+++ b/css/style.css
@@ -384,10 +384,10 @@
 
      .slider-nav a {
         width: 50px;
-        height: 5px;
+        height: 10px;
         border-radius: 50px;
         background-color: #ffffff;
-        opacity: 0.6;
+        opacity: 0.7;
         transition: opacity ease 250ms;
      }
 
